--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Progressive Enhancement">
     <meta name="author" content="Simon">
     <link rel="SHORTCUT ICON" href="images/404.png">
-    <link href="./asset/css/style.css" rel="stylesheet">
+    <link href="./assets/css/style.css" rel="stylesheet">
     
 </head>
 <header>
